# chunkr-chat-app

./: .gitignore  .typos.toml  CHANGELOG.md  LICENSE  README.md  compose.yaml  docker-compose.yaml  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
.cursor/: xyz.code-workspace
.github/: .release-please-manifest.json  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
apps/api/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  package.json  pyproject.toml  requirements.txt  vercel.json
apps/api/src/: api_keys.py  chunkr_config.py  db.py  main.py  tools.py
apps/api/src/routes/: __init__.py  generate.py  upload.py
apps/api/supabase/: config.toml
apps/web/: .dockerignore  CHANGELOG.md  Dockerfile  README.md  chunkr_openapi.json  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/client/: client.gen.ts  sdk.gen.ts  types.gen.ts
apps/web/src/components/: api-key-config.tsx  file-uploader.tsx  loader.tsx  react-scan.tsx  uploader.tsx  url-uploader.tsx
apps/web/src/components/chat/: assistant-loader.tsx  assistant-message.tsx  bounding-box-display.tsx  chat-avatar.tsx  citation.tsx  message-parser.tsx  model-select.tsx  pdf-chat.tsx  pdf-viewer.tsx  table-wrapper.tsx  user-message.tsx
apps/web/src/helpers/: api-keys.ts  bounding-box-colors.ts  streaming-response-handler.ts
apps/web/src/hooks/: use-pdf-viewer.ts
apps/web/src/store/: response-store.ts
apps/web/src/styles/: globals.css
apps/web/src/types/: chat.ts
(+8 files in other folders)
