[project]
name = "chunkr-chat-app-api"
version = "0.3.0"
description = "Backend for the Chunkr Chat App"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chunkr-ai>=0.0.50",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "openai>=1.86.0",
    "psycopg2-binary>=2.9.10",
    "python-multipart>=0.0.20",
    "ruff>=0.12.0",
    "supabase>=2.15.3",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "ruff>=0.12.0",
]
